--- a/.github/workflows/publish-container.yml
+++ b/.github/workflows/publish-container.yml
@@ -6,6 +6,14 @@ on:
       - '*'
 
 jobs:
+  check:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check
+        shell: bash
+        run: make check
+
   build_and_publish:
     runs-on: ubuntu-latest
 
