--- a/.github/workflows/publish-container.yml
+++ b/.github/workflows/publish-container.yml
@@ -10,11 +10,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check
-        shell: bash
-        run: make check
+
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Check
+      shell: bash
+      run: make check
 
   build_and_publish:
+    needs: check
     runs-on: ubuntu-latest
 
     steps:
